--- a/style.css
+++ b/style.css
@@ -65,5 +65,26 @@ h1 {
   font-size: 18px;
   line-height: 1.6;
 }
+.project-card{
+  background:#111;
+  padding:25px;
+  margin:30px 0;
+  border-radius:12px;
+  border: 1px solid #00eaff50;
+}
+
+.btn{
+  display:inline-block;
+  margin-top:15px;
+  padding:10px 20px;
+  border-radius:6px;
+  border:1px solid #00eaff;
+  text-decoration:none;
+}
+.btn:hover{
+  background:#00eaff;
+  color:#000;
+  font-weight:bold;
+}
 
 
